feat: add zorya to tools suite
Expose the Zorya concolic execution engine in the software tools list.

--- a/src/pages/tools-suite.astro
+++ b/src/pages/tools-suite.astro
@@ -100,6 +100,11 @@ const sideChannelTools = [
 
 const softwareTools = [
   {
+    name: 'Zorya',
+    description: "Automated concolic execution engine optimized for Go binaries analysis, using Ghidra's P-Code as IR, and written in Rust.",
+    repo: 'https://github.com/Ledger-Donjon/zorya/'
+  },
+  {
     name: 'cargo-checkct',
     description: 'Written in Rust, it verifies formally if a software is compiled down to constant-time machine code.',
     repo: 'https://github.com/Ledger-Donjon/cargo-checkct'
