feat: add favicon assets
Ship favicon files and link sizes for better device support.

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -25,7 +25,9 @@ const socialImageURL = new URL(image, Astro.site);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href={`${base}favicon.svg`} />
+    <link rel="icon" href={`${base}favicon.ico`} sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href={`${base}favicon-32x32.png`} />
+    <link rel="icon" type="image/png" sizes="16x16" href={`${base}favicon-16x16.png`} />
     <link rel="canonical" href={canonicalURL} />
     
     <title>{title} | Ledger Donjon</title>
