--- a/src/pages/bounty.astro
+++ b/src/pages/bounty.astro
@@ -47,7 +47,7 @@ const withBase = (path) => `${base}${path.replace(/^\/+/, '')}`;
             <ul>
               <li>Hardware attacks on the Ledger devices (i.e. hardware products)</li>
               <li>Software attacks on the firmware running on the devices</li>
-              <li>Vulnerabilities in apps available through Ledger Live</li>
+              <li>Vulnerabilities in apps available through Ledger Wallet</li>
             </ul>
             
             <h4>In-Scope Vulnerabilities</h4>
