--- a/src/pages/hall-of-fame.astro
+++ b/src/pages/hall-of-fame.astro
@@ -190,10 +190,12 @@ const hallOfFame = [
     }
     
     &__label {
+      display: inline-block;
       font-size: var(--text-xl);
       font-weight: 700;
       color: var(--color-accent-primary);
       font-family: var(--font-mono);
+      transform: translateX(25px);
     }
     
     &__content {
