--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -123,6 +123,7 @@ body {
   color: var(--color-text-primary);
   background-color: var(--color-bg-primary);
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Background Pattern */
