--- a/src/pages/tools-suite.astro
+++ b/src/pages/tools-suite.astro
@@ -10,28 +10,24 @@ const hardwareBoards = [
     name: 'Scaffold',
     description: 'Multi-purpose board to control devices with embedded features such as: current consumption measurement, multiple communication protocols (SPI, I²C, UART...), command triggering, pulse generators...',
     image: withBase('/img/tools-suite/scaffold-board.png'),
-    imageFit: 'contain',
     repo: 'https://github.com/Ledger-Donjon/scaffold/'
   },
   {
     name: 'Curmea',
     description: 'Simple board for differential current consumption measurement.',
     image: withBase('/img/tools-suite/curmea.png'),
-    imageFit: 'contain',
     repo: 'https://github.com/Ledger-Donjon/curmea/'
   },
   {
     name: 'Silicon Toaster',
     description: 'Board to inject electromagnetic pulses from a bank of capacitors, that can be loaded to a programmable level of voltage, and discharged with a triggering input source.',
-    image: withBase('/img/tools-suite/silicontoaster.png'),
-    imageFit: 'contain',
+    image: withBase('/img/tools-suite/silicontoaster.png'),=
     repo: 'https://github.com/Ledger-Donjon/silicon-toaster/'
   },
   {
     name: 'Shutter Controller',
     description: "A low-cost motorized add-on of optical tower on ALPhANOV's Laser Microscope Station to control a mechanical shutter.",
     image: withBase('/img/tools-suite/shutter-controller.png'),
-    imageFit: 'contain',
     repo: 'https://github.com/Ledger-Donjon/shutter-controller/'
   }
 ];
@@ -46,14 +42,12 @@ const hardwareSoftware = [
     name: 'Turboplot',
     description: 'A blazingly fast waveform renderer made for visualizing huge traces.',
     image: withBase('/img/tools-suite/turboplot.png'),
-    imageFit: 'contain',
     repo: 'https://github.com/Ledger-Donjon/turboplot/'
   },
   {
     name: 'pystages',
     description: 'Python module for managing the positions of physical actuators, such as CNCs, Corvus, or Newport. Also provides a simple User Interface to make easy and quick moves of actuators.',
     image: withBase('/img/tools-suite/pystages.png'),
-    imageFit: 'contain',
     imageStyle: 'app',
     repo: 'https://github.com/Ledger-Donjon/pystages/'
   },
@@ -81,7 +75,6 @@ const hardwareSoftware = [
     name: 'Visplot',
     description: 'A side-channel traces visualizer based on vispy.',
     image: withBase('/img/tools-suite/visplot.gif'),
-    imageFit: 'contain',
     imageStyle: 'app',
     repo: 'https://github.com/Ledger-Donjon/visplot/'
   }
@@ -189,7 +182,7 @@ const softwareTools = [
                     src={tool.image}
                     alt={tool.name}
                     loading="lazy"
-                    class:list={['tool-card__img', { 'tool-card__img--contain': tool.imageFit === 'contain' }]}
+                    class:"tool-card__img"
                   />
                 </div>
               )}
@@ -326,10 +319,24 @@ const softwareTools = [
         padding: var(--space-5);
       }
     }
+
+    &__image {
+      aspect-ratio: 16 / 10;
+      background: var(--color-bg-tertiary);
+      overflow: hidden;
+      display: block;
+      
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        padding: var(--space-3);
+        transition: transform var(--transition-slow);
+      }
+    }
     
-    &__img--contain {
-      object-fit: contain;
-      padding: var(--space-3);
+    &:hover &__image img {
+      transform: scale(1.05);
     }
 
     &__image--app {
@@ -346,24 +353,6 @@ const softwareTools = [
         border-radius: var(--radius-lg);
         box-shadow: var(--shadow-sm);
       }
-    }
-
-    &__image {
-      aspect-ratio: 16 / 10;
-      background: var(--color-bg-tertiary);
-      overflow: hidden;
-      display: block;
-      
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform var(--transition-slow);
-      }
-    }
-    
-    &:hover &__image img {
-      transform: scale(1.05);
     }
     
     &__content {
