Fix syntax error in tools-suite.astro

--- a/src/pages/tools-suite.astro
+++ b/src/pages/tools-suite.astro
@@ -21,7 +21,7 @@ const hardwareBoards = [
   {
     name: 'Silicon Toaster',
     description: 'Board to inject electromagnetic pulses from a bank of capacitors, that can be loaded to a programmable level of voltage, and discharged with a triggering input source.',
-    image: withBase('/img/tools-suite/silicontoaster.png'),=
+    image: withBase('/img/tools-suite/silicontoaster.png'),
     repo: 'https://github.com/Ledger-Donjon/silicon-toaster/'
   },
   {
