Remove imageStyle property from Visplot tool and syntax error fix

--- a/src/pages/tools-suite.astro
+++ b/src/pages/tools-suite.astro
@@ -75,7 +75,6 @@ const hardwareSoftware = [
     name: 'Visplot',
     description: 'A side-channel traces visualizer based on vispy.',
     image: withBase('/img/tools-suite/visplot.gif'),
-    imageStyle: 'app',
     repo: 'https://github.com/Ledger-Donjon/visplot/'
   }
 ];
@@ -182,7 +181,7 @@ const softwareTools = [
                     src={tool.image}
                     alt={tool.name}
                     loading="lazy"
-                    class:"tool-card__img"
+                    class="tool-card__img"
                   />
                 </div>
               )}
